<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:checked="true"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_item_home"/>
        <item
            android:id="@+id/navigation_item_daily"
            android:icon="@drawable/ic_nav_daily"
            android:title="@string/nav_item_daily"/>
        <item
            android:id="@+id/navigation_item_lifetime"
            android:icon="@drawable/ic_nav_lifetime"
            android:title="@string/nav_item_lifetime"/>
    </group>

    <group
        android:id="@+id/settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_item_settings"
            android:title="@string/nav_item_settings"/>
    </group>
</menu>